--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jbmchd-vue/jb-bootstrapvue-extends",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "moment": "^2.24.0",
     "vuelidate": "^0.7.4",
     "vue-loading-overlay": "^3.2.0",
+    "v-calendar": "^1.0.0-beta.22",
     "@jbmchd-vue/jb-v-global": "1.1.0"
   }
 }
